--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Google Map Application</h1>
+
+<!-- this creates a google map on the page with the given lat/lng from -->
+<!-- the component as the initial center of the map: -->
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)">
+  <agm-marker [latitude]="m.lat" [longitude]="m.lng" *ngFor="let m of markers" (markerClick)="markerClicked(m)">
+    <agm-info-window><strong>{{ clickedMarker }}</strong></agm-info-window>
+  </agm-marker>
+
+  <agm-polyline>
+    <agm-polyline-point [latitude]="m.lat" [longitude]="m.lng" *ngFor="let m of markers">
+    </agm-polyline-point>
+  </agm-polyline>
+</agm-map>
